@@ -12,4 +12,3 @@ pm_to_blib*
 cover_db
 pod2htm*.tmp
 Plack-Session-Store-MongoDB-*
-*.cache
