@@ -1,7 +1,9 @@
 name    = Plack-Session-Store-MongoDB
-version = 0.2
+version = 0.3
 author  = Ido Perlmuter <ido@ido50.net>
 license = Perl_5
 copyright_holder = Ido Perlmuter
 
-[@IDOPEREL]
+[@Filter]
+-bundle = @IDOPEREL
+-remove = LatestPrereqs
